# Rubik-s-Cube

./: README.md  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: index.py
rubik/: __init__.py  __main__.py  benchmark.py
rubik/cubes/: __init__.py  coordcube.py  cube.py  cubiecube.py  facecube.py  pieces.py  printer.py  tables.py
rubik/solvers/: __init__.py  kociembafastsolver.py  kociembasolver.py  solver.py
src/components/: Cube.tsx  Header.tsx  Options.tsx  Piece.tsx  Results.tsx
src/pages/: index.tsx
tests/: testcube.py  testsolver.py
