[tool.poetry]
name = "rubik"
version = "0.2.0"
description = ""
authors = ["Sreeram Kasulu <sriramkasulu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
string-color = "^1.2.3"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
prettytable = "^3.9.0"
kociemba = "^1.2.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pipreqs = "^0.4.13"

[tool.poetry.scripts]
rubik = 'rubik.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
